--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
           <input type="text" placeholder="Room Name" id="js-room-id">
           <button id="js-join-trigger">Join</button>
           <button id="js-leave-trigger">Leave</button>
-          <video id="js-local-stream"></video>
         </div>
-
+        <div class="room">
+            <video id="js-local-stream"></video>
+		</div>
         <div class="remote-streams" id="js-remote-streams"></div>
 
         <div>
